--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
+    "lru-cache": "^11.1.0",
+    "lucide-react": "^0.541.0",
     "maplibre-gl": "^5.6.2",
     "next": "15.5.0",
     "react": "19.1.0",
