--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-html5-camera-photo": "^1.5.11",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-long-press": "^3.3.0"
@@ -44,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-html5-camera-photo": "^1.5.4",
     "cssnano": "^7.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
